# ShadowTwin

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  package.json  tsconfig.base.json
apps/api/: .env.example  manage.py  pyproject.toml
apps/api/apps/accounts/: models.py
apps/api/apps/actions/: apps.py  models.py
apps/api/apps/analytics/: models.py
apps/api/apps/approvals/: apps.py  models.py  serializers.py  urls.py  views.py
apps/api/apps/audit/: models.py  serializers.py  urls.py  views.py
apps/api/apps/authn/: apps.py  authentication.py  models.py  serializers.py  services.py  urls.py  views.py
apps/api/apps/automations/: apps.py  models.py
apps/api/apps/billing/: models.py
apps/api/apps/email_intelligence/: apps.py  models.py  serializers.py  urls.py  views.py
apps/api/apps/ingestion/: apps.py  models.py
apps/api/apps/integrations/: crypto.py  models.py  serializers.py  services.py  urls.py  views.py
apps/api/apps/meetings/: apps.py  models.py  serializers.py  urls.py  views.py
apps/api/apps/memory/: apps.py  models.py  serializers.py  urls.py  views.py
apps/api/apps/notifications/: models.py  serializers.py  urls.py  views.py
apps/api/apps/privacy/: apps.py  models.py  serializers.py  urls.py  views.py
apps/api/apps/recommendations/: models.py  serializers.py  urls.py  views.py
apps/api/apps/twins/: apps.py  models.py
apps/api/apps/workspaces/: apps.py  (+5 more)
apps/api/shadowtwin_api/: api_urls.py  asgi.py  celery_app.py  urls.py  wsgi.py
apps/backend/: README.md  pyproject.toml
apps/backend/app/: main.py
(+125 files in other folders)
